Identificador de mensagens
- Identificar mensagem enviada e recebida
- Ordenar mensagens

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -33,6 +33,7 @@
         android:layout_marginBottom="2dp"
         android:elevation="4dp"
         android:text="Enviar"
+        android:onClick="enviarMensagem"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editChat" />
