--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/contatos"
-        android:title="@string/Contatos"/>
+        android:title="@string/Contatos"
+        app:showAsAction="always"/>
 
     <item android:id="@+id/chatGrupo"
         android:title="@string/chatGrupo"/>
 
     <item android:id="@+id/logout"
-        android:title="@string/Sair" />
+        android:title="@string/Sair"
+        app:showAsAction="always"/>
 
 </menu>
