--- a/app/src/main/res/layout/activity_mensagens.xml
+++ b/app/src/main/res/layout/activity_mensagens.xml
@@ -25,7 +25,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewChat"
+        android:id="@+id/recyclerViewMensagensContatos"
         android:layout_width="410dp"
         android:layout_height="0dp"
         android:layout_marginTop="60dp"
